SFDCProject/src/objects/In_Person_Recipient__c.object
<CustomObject>
    <fields>
        <fullName>Client_User_Id__c</fullName>
        <label>Client User Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Envelop_Id__c</fullName>
        <formula>SR_Attachment__r.Envelop_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Envelop Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Host_Email__c</fullName>
        <label>Host Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Host_Name__c</fullName>
        <label>Host Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Person_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>In Person Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>In Person Recipients</relationshipLabel>
        <relationshipName>In_Person_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recipient_Id__c</fullName>
        <label>Recipient Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Routing_Order__c</fullName>
        <label>Routing Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SR_Attachment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SR Attachment</label>
        <referenceTo>SR_Attachment__c</referenceTo>
        <relationshipLabel>In Person Recipients</relationshipLabel>
        <relationshipName>In_Person_Recipients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Signer_Email__c</fullName>
        <formula>In_Person_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Signer Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signer_Name__c</fullName>
        <formula>In_Person_Contact__r.FirstName + &apos; &apos; + In_Person_Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Signer Name</label>
        <type>Text</type>
    </fields>
    <label>In Person Recipient</label>
    <nameField>
        <label>In Person Recipient Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>In Person Recipients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>